--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,9 @@
     <div class="wrapper fadeInDown">
       <div id="formContent">
         <!-- Tabs Titles -->
-
+        <div>
+          {{ error }}
+        </div>
         <!-- Login Form -->
         <form method="POST">
           <input type="text" id="login" class="fadeIn second" name="username" placeholder="login">
