--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,7 +23,7 @@
         <!-- Signup Form -->
         <form method="POST">
           <input type="text" id="login" class="fadeIn second" name="username" placeholder="login">
-          <input type="password" id="password" class="fadeIn third" name="password" placeholder="password (only numbers)">
+          <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
           <input type="text" id="email" class="fadeIn third" name="email" placeholder="email">
           <input type="text" id="phone" class="fadeIn third" name="phone" placeholder="phone number">
           <input type="text" id="city" class="fadeIn third" name="city" placeholder="city">
