--- a/templates/index.html
+++ b/templates/index.html
@@ -27,12 +27,7 @@
           <input type="submit" class="fadeIn fourth" value="Log In">
         </form>
 
-        <!-- Remind Passowrd -->
-        <div id="formFooter">
-          <a class="underlineHover" href="#">Forgot Password?</a>
-        </div>
-
-        <!-- Remind Passowrd -->
+        <!-- Signup -->
         <div id="formFooter">
           <a class="underlineHover" href="/signup">Don't You Have An Account?</a>
         </div>
